fix shop spacing

--- a/assets/css/index_styles.css
+++ b/assets/css/index_styles.css
@@ -123,7 +123,7 @@ a {
 	margin-bottom: 0.5rem;
 }
 
-.itemName {
+#itemName {
 	font-size: 1rem;
 	margin-bottom: 0.25rem;
 }
@@ -135,7 +135,7 @@ a {
 
 .purchaseButton {
 	/* padding-top: 40px; */
-	margin-top: 30px;
+	margin-top: 20px;
 	height: 40px;
 	width: 100px;
 }
@@ -145,7 +145,7 @@ a {
 }
 .purchaseConfirmBox {
 	background-color: white;
-	padding: 20px;
+	padding: 15px;
 	width: 80%;
 	text-align: center;
 	margin-top: 20px;
